done first part

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+    <title>Fast Reminder</title>
   </head>
   <body>
     <div id="root"></div>
-    <button id="permitir">Ativar Notificações</button>
     <script type="module" src="/src/main.jsx"></script>
     <script src="/notifier.js"></script>
   </body>
