--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <script src="/notifier.js"></script>
+    <script src="/auth.js">
+    </script>
   </body>
 </html>
